--- a/Homepage/Header.htm
+++ b/Homepage/Header.htm
@@ -20,6 +20,12 @@
                     <li><a href="contact.html">Liên Hệ</a></li>
                 </ul>
             </nav>
+            <div id="search-bar">
+                <form action="/search" method="get">
+                    <input type="text" name="query" id="search-query" placeholder="Tìm kiếm giày, ví dụ: Nike Air Max" aria-label="Search">
+                    <button type="submit" id="search-submit"><img src="search-icon.png" alt="Tìm kiếm" /></button>
+                </form>
+            </div>
             <div id="cart">
                 <a href="cart.html"><img src="cart-icon.png" alt="Giỏ Hàng" /> Giỏ Hàng</a>
             </div>
@@ -27,3 +33,4 @@
     </header>
 </body>
 </html>
+
