--- a/Homepage/Header.htm
+++ b/Homepage/Header.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Cửa Hàng Giày của Bạn</title>
+    <title>Cửa Hàng Giày 2hands</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
