--- a/Homepage/Header.htm
+++ b/Homepage/Header.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Cửa Hàng Giày 2hands</title>
+    <title>Cửa Hàng Giày của Bạn</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -16,7 +16,6 @@
                     <li class="current"><a href="index.html">Trang Chủ</a></li>
                     <li><a href="products.html">Sản Phẩm</a></li>
                     <li><a href="promotions.html">Khuyến Mãi</a></li>
-                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Liên Hệ</a></li>
                 </ul>
             </nav>
@@ -33,4 +32,5 @@
     </header>
 </body>
 </html>
+
 
