--- a/Homepage/Header.htm
+++ b/Homepage/Header.htm
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Cửa Hàng Giày của Bạn</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>Cửa Hàng Giày 2hands</title>
+    <link rel="stylesheet" type="text/css" href="BTL-XDWeb\bootstrap-5.3.3-dist\css\bootstrap.min.css">
 </head>
 <body>
     <header>
@@ -16,6 +16,7 @@
                     <li class="current"><a href="index.html">Trang Chủ</a></li>
                     <li><a href="products.html">Sản Phẩm</a></li>
                     <li><a href="promotions.html">Khuyến Mãi</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Liên Hệ</a></li>
                 </ul>
             </nav>
@@ -32,5 +33,4 @@
     </header>
 </body>
 </html>
-
 
