--- a/Homepage/Header.html
+++ b/Homepage/Header.html
@@ -5,6 +5,15 @@
     <title>Cửa Hàng Giày 2hands</title>
     <link rel="stylesheet" type="text/css" href="bootstrap-5.3.3-dist\css\bootstrap.min.css">
     <style>
+        container{
+    display: flex;
+    justify-content: space-evenly;
+    color: #fff;
+    background-color: rgb(165, 165, 253);
+    font-weight: bold;
+    align-items: center;
+    width: 100%;
+}
     </style>
 </head>
 <body>
