--- a/Homepage/Header.html
+++ b/Homepage/Header.html
@@ -5,7 +5,7 @@
     <title>Cửa Hàng Giày 2hands</title>
     <link rel="stylesheet" type="text/css" href="bootstrap-5.3.3-dist\css\bootstrap.min.css">
     <style>
-        container{
+        body{
     display: flex;
     justify-content: space-evenly;
     color: #fff;
