--- a/Homepage/Header.html
+++ b/Homepage/Header.html
@@ -23,7 +23,7 @@
                 <img src="IMG\anh1.jpg" alt="">
             </div>
             <div id="branding">
-                <h1><a href="https://bd-1.edkncdn.net/img/800x800/stores/6319bca140641aa1ae1ee667/product-square/1699886465650-pKtqqUSvX9Nfc-D5CU8It/DS_page-0010.webp">LOGO CỬA HÀNG</a></h1>
+                <h1><a href="index.html">LOGO CỬA HÀNG</a></h1>
             </div>
             <nav>
                 <ul>
