--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -188,7 +188,7 @@ nav a:hover {
             </div>
             <nav>
                 <ul>
-                    <li class="current"><a href="C:\Users\Admin\Documents\GitHub\BTL-XDWeb\Homepage\Homepage.html">Trang Chủ</a></li>
+                    <li class="current"><a href="Homepage.html">Trang Chủ</a></li>
                     <li><a href="products.html">Sản Phẩm</a></li>
                     <li><a href="contact.html">Liên Hệ</a></li>
                 </ul>
