--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Cửa Hàng Giày 2hands</title>
     <link rel="stylesheet" type="text/css" href="homepage.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="shortcut icon" href="img\favicon-32x32.png">
 </head>
 <body>
     <div class="header">
@@ -19,13 +22,14 @@
                 </ul>
             </nav>
             <div id="search-bar">
-                <form action="/search" method="get">
-                    <input type="text" name="query" id="search-query" placeholder="Tìm kiếm giày, ví dụ: Nike Air Max" aria-label="Search">
-                    <button type="submit" id="search-submit"><img id="search-icon" src="https://cdn3.iconfinder.com/data/icons/feather-5/24/search-512.png" alt="Tìm kiếm" /></button>
+                <form action="search.html" method="get">
+                    <input type="text" name="query" id="search-query" placeholder="Tìm kiếm giày" aria-label="Search">
+                    <button type="submit" id="search-submit"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
             </div>
             <div id="cart">
-                <a href="cart.html"><img src="https://cdn.pixabay.com/photo/2013/07/12/14/53/cart-148964_1280.png" alt="" />Giỏ hàng</a>
+                <a href="account.html"><i class="fa-solid fa-user"></i></a>
+                <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
             </div>
         </div>
     </div>
