--- a/Homepage/spt.html
+++ b/Homepage/spt.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="shortcut icon" href="img\favicon-32x32.png">
+    <style>
+        #main {
+            display: flex;
+        }
+        #main-spt {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
     <div class="header">
@@ -33,9 +44,62 @@
             </div>
         </div>
     </div>
-<div class="banner">
-    <div>
-        <h2>Các sản phẩm</h2>
+    <div id = "ke">
+        <a href="Homepage.html">Trang chu</a> / <a href="spt.html">Trang san pham</a>
+    </div>
+    <div id = "main">
+    <div id = "loc">
+        <div id = "Thuong hieu">
+            <span>Thuong hieu</span>
+        </div>
+        <div id = "cth">
+            <ul>
+                <li>Nike</li>
+                <li>Adidas</li>
+                <li>MLB</li>
+                <li>PUMA</li>
+                <li>NEW BALANCE</li>
+            </ul>
+        </div>
+        <div id = "gia">
+            <span>Gia san pham</span>
+        </div>
+        <div id = "gia-spt">
+            <ul>
+                <li>Duoi 1.000.000&#8363;</li>
+                <li>1.000.000&#8363;-2.000.000&#8363;</li>
+                <li>2.000.000&#8363;-3.500.000&#8363;</li>
+                <li>3.500.000&#8363;-5.000.000&#8363;</li>
+                <li>Tren 5.000.000&#8363;</li>
+            </ul>
+        </div>
+        <div id = "gia">
+            <span>Gia san pham</span>
+        </div>
+        <div id = "gia-spt">
+            <ul>
+                <li>Duoi 1.000.000&#8363;</li>
+                <li>1.000.000&#8363;-2.000.000&#8363;</li>
+                <li>2.000.000&#8363;-3.500.000&#8363;</li>
+                <li>3.500.000&#8363;-5.000.000&#8363;</li>
+                <li>Tren 5.000.000&#8363;</li>
+            </ul>
+        </div>
+        <div id = "kc">
+            <span>Kich thuoc</span>
+        </div>
+        <div id = "kc-spt">
+            <ul>
+                <li>35</li>
+                <li>36</li>
+                <li>37</li>
+                <li>38</li>
+                <li>39</li>
+                <li>40</li>
+                <li>41</li>
+                <li>42</li>
+            </ul>
+        </div>
     </div>
     <div class = "body-banner">
         <div class="sp">
