--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -19,6 +19,7 @@
                     <li class="current"><a href="Homepage.html">Trang Chủ</a></li>
                     <li><a href="spt.html">Sản Phẩm</a></li>
                     <li><a href="lienhe.html">Liên Hệ</a></li>
+                    <li><a href="contact.html">Lien he</a></li>
                 </ul>
             </nav>
             <div id="search-bar">
