--- a/Homepage/spt.html
+++ b/Homepage/spt.html
@@ -28,8 +28,8 @@
             <nav>
                 <ul>
                     <li class="current"><a href="Homepage.html">Trang Chủ</a></li>
-                    <li><a href="products.html">Sản Phẩm</a></li>
-                    <li><a href="contact.html">Liên Hệ</a></li>
+                    <li><a href="spt.html">Sản Phẩm</a></li>
+                    <li><a href="lienhe.html">Liên Hệ</a></li>
                 </ul>
             </nav>
             <div id="search-bar">
