Change application, sp

--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -19,6 +19,7 @@
                     <li class="current"><a href="Homepage.html">Trang Chủ</a></li>
                     <li><a href="spt.html">Sản Phẩm</a></li>
                     <li><a href="lienhe.html">Liên Hệ</a></li>
+
                 </ul>
             </nav>
             <div id="search-bar">
@@ -28,14 +29,14 @@
                 </form>
             </div>
             <div id="cart">
-                <a href="account.html"><i class="fa-solid fa-user"></i></a>
+                <a href="login.html"><i class="fa-solid fa-user"></i></a>
                 <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
             </div>
         </div>
     </div>
     <div class="banner">
         <div>
-            <h2>Các sản phẩm</h2>
+            <h2>Các sản phẩm nổi bật</h2>
         </div>
         <div class = "body-banner">
             <div class="sp">
@@ -54,82 +55,100 @@
                 </div>
             </div>
             <div class="sp">
-                <img src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/78d7cfcb3077424fa15c371399a5f110_9366/SAMBA_OG_W_Black_IE5836_01_standard.jpg" alt="Adidas Samba OG Black Wonder White IE5836" />           
+                <img src="//product.hstatic.net/1000383440/product/6ba2a7b4-e965-45c5-83d9-0b8f81f7181a_7ec68eee080b4c10ae6123ecebe38736_master.jpg" alt="PUMA Rebound V6 Low White 392328-03" />           
                 <div class="button-add">
                     <button type="submit" title="Mua ngay" class="action"">Mua ngay</button>
                     <button type="submit" title="Thêm vào giỏ" class="action add-to-cart">Thêm vào giỏ</button>
                 </div>
                 <div class="sp-c">
                         <h3 class="name">
-                            Adidas Samba OG Black Wonder White IE5836
+                            PUMA Rebound V6 Low White 392328-03
                         </h3>
                 </div>
                 <div>	
-                    <p class="gia">2,680,000₫</p>
+                    <p class="gia">1,450,000₫</p>
                 </div>
             </div>
             <div class="sp">
-                <img src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/78d7cfcb3077424fa15c371399a5f110_9366/SAMBA_OG_W_Black_IE5836_01_standard.jpg" alt="Adidas Samba OG Black Wonder White IE5836" />           
+                <img src="//product.hstatic.net/1000383440/product/4a5ce202-b7f6-4ecf-a463-3f0014b91df7_47d945a2447e449e8b828ea3be2de583_master.jpg" alt="Nike Air Jordan 1 Low SE Vintage Panda (WMNS) FB9893-101" />           
                 <div class="button-add">
                     <button type="submit" title="Mua ngay" class="action"">Mua ngay</button>
                     <button type="submit" title="Thêm vào giỏ" class="action add-to-cart">Thêm vào giỏ</button>
                 </div>
                 <div class="sp-c">
                         <h3 class="name">
-                            Adidas Samba OG Black Wonder White IE5836
+                            Nike Air Jordan 1 Low SE Vintage Panda (WMNS) FB9893-101
                         </h3>
                 </div>
                 <div>	
-                    <p class="gia">2,680,000₫</p>
+                    <p class="gia">2,750,000₫</p>
                 </div>
             </div>
             <div class="sp">
-                <img src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/78d7cfcb3077424fa15c371399a5f110_9366/SAMBA_OG_W_Black_IE5836_01_standard.jpg" alt="Adidas Samba OG Black Wonder White IE5836" />           
+                <img src="//product.hstatic.net/1000383440/product/b0b5bd46-176c-4b13-946c-5fffb48cd878_9a921920c5ec4c1ea3e0e6b9d902ebfb_master.jpg" alt="Adidas Spezial Handball Aluminium Core Black Cloud White IF6562" />           
                 <div class="button-add">
                     <button type="submit" title="Mua ngay" class="action"">Mua ngay</button>
                     <button type="submit" title="Thêm vào giỏ" class="action add-to-cart">Thêm vào giỏ</button>
                 </div>
                 <div class="sp-c">
                         <h3 class="name">
-                            Adidas Samba OG Black Wonder White IE5836
+                            Adidas Spezial Handball Aluminium Core Black Cloud White IF6562
                         </h3>
                 </div>
                 <div>	
-                    <p class="gia">2,680,000₫</p>
+                    <p class="gia">2,450,000₫</p>
                 </div>
             </div>
             <div class="sp">
-                <img src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/78d7cfcb3077424fa15c371399a5f110_9366/SAMBA_OG_W_Black_IE5836_01_standard.jpg" alt="Adidas Samba OG Black Wonder White IE5836" />           
+                <img src="https://product.hstatic.net/1000383440/product/75838285-fe87-4811-a51f-b64e58adf403_412e542c268f4a38a279a4b2a3887b3f_master.jpg" alt="Puma Court Ultra Vapor Gray White 389368-09" />           
                 <div class="button-add">
                     <button type="submit" title="Mua ngay" class="action"">Mua ngay</button>
                     <button type="submit" title="Thêm vào giỏ" class="action add-to-cart">Thêm vào giỏ</button>
                 </div>
                 <div class="sp-c">
                         <h3 class="name">
-                            Adidas Samba OG Black Wonder White IE5836
+                            Puma Court Ultra Vapor Gray White 389368-09
                         </h3>
                 </div>
                 <div>	
-                    <p class="gia">2,680,000₫</p>
+                    <p class="gia">1,450,000₫</p>
                 </div>
             </div>
             <div class="sp">
-                <img src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/78d7cfcb3077424fa15c371399a5f110_9366/SAMBA_OG_W_Black_IE5836_01_standard.jpg" alt="Adidas Samba OG Black Wonder White IE5836" />           
+                <img src="https://product.hstatic.net/1000383440/product/50a909a8-a526-4155-b459-459a851ee8a0_7f5dba403cb04c6cb019b0e95470a57a_master.jpg" alt="Nike Air Force 1 Low Hoops DH7440-100" />           
                 <div class="button-add">
                     <button type="submit" title="Mua ngay" class="action"">Mua ngay</button>
                     <button type="submit" title="Thêm vào giỏ" class="action add-to-cart">Thêm vào giỏ</button>
                 </div>
                 <div class="sp-c">
                         <h3 class="name">
-                            Adidas Samba OG Black Wonder White IE5836
+                            Nike Air Force 1 Low Hoops DH7440-100
                         </h3>
                 </div>
                 <div>	
-                    <p class="gia">2,680,000₫</p>
+                    <p class="gia">1,950,000₫</p>
                 </div>
             </div>
         </div>
     </div>
+    <footer>
+        <div class ="main-footer-bottom">
+            <div class ="gioi-thieu">
+                <h4>Giới thiệu</h4>
+                <p>2hands Store mong muốn đem đến những trải nghiệm và dịch vụ tốt nhất cho khách hàng về các sản phẩm</p>
+            </div>
+            <div class ="Ttlh">
+                <h4>Thông tin liên hệ</h4>
+                <ul>
+                    <li>Dien thoai: 091199261</li>
+                    <li>Facebook: https://www.facebook.com</li>
+                </ul>
+            </div>
+        </div>
+        <div class="main-footer--border">
+            <p>Copyright © 2024 <a href="Homepage.html"> 2hands Store</a></p>
+        </div>
+    </footer>
 </body>
 </html>
 
