--- a/Homepage/lienhe.html
+++ b/Homepage/lienhe.html
@@ -28,7 +28,7 @@
                 </form>
             </div>
             <div id="cart">
-                <a href="account.html"><i class="fa-solid fa-user"></i></a>
+                <a href="login.html"><i class="fa-solid fa-user"></i></a>
                 <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
             </div>
         </div>
@@ -46,7 +46,6 @@
             <ul>
                 <br>
                 <li>Dien thoai: 091199261</li>
-                <li>Facebook: <a href="https://www.facebook.com/">https://www.facebook.coms</a></li>
             </ul>
             <h4>Thoi gian lam viec</h4>
             <br>
