Xóa bóng mờ chữ ở sản phẩm, thêm giỏ hàng mẫu, update

--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -140,13 +140,13 @@
             <div class ="Ttlh">
                 <h4>Thông tin liên hệ</h4>
                 <ul>
-                    <li>Dien thoai: 091199261</li>
-                    <li>Facebook: https://www.facebook.com</li>
+                    <li>Điện thoại: 091199261</li>
+                    <li>Facebook:<a href="https://www.facebook.com">Facebook.com</a></li>
                 </ul>
             </div>
         </div>
         <div class="main-footer--border">
-            <p>Copyright © 2024 <a href="Homepage.html"> 2hands Store</a></p>
+            <p>Copyright © 2024 <a href="Homepage.html">2hands Store</a></p>
         </div>
     </footer>
 </body>
