--- a/Homepage/lienhe.html
+++ b/Homepage/lienhe.html
@@ -45,7 +45,7 @@
             <h4>Thong tin lien he</h4>
             <ul>
                 <br>
-                <li>Dien thoai: 091199261</li>
+                <li>Điện thoại: 091199261</li>
             </ul>
             <h4>Thoi gian lam viec</h4>
             <br>
