--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="sp-c">
                         <h3 class="name">
-                            Adidas Spezial Handball Aluminium Core Black Cloud White IF6562
+                            Adidas SHA Core BCW IF6562
                         </h3>
                 </div>
                 <div>	
