--- a/Homepage/spt.html
+++ b/Homepage/spt.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Cửa Hàng Giày 2hands</title>
     <link rel="stylesheet" type="text/css" href="homepage.css">
+    <link rel="stylesheet" type="text/css" href="spt.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="shortcut icon" href="img\favicon-32x32.png">
@@ -44,9 +45,9 @@
             </div>
         </div>
     </div>
-    <div id = "ke">
-        <a href="Homepage.html">Trang chu</a> / <a href="spt.html">Trang san pham</a>
-    </div>
+    <nav>
+        <a href="Homepage.html" alt >Trang Chủ</a> / <a href="spt.html">Trang sản phẩm</a>
+    </nav>
     <div id = "main">
     <div id = "loc">
         <div id = "Thuong hieu">
@@ -159,7 +160,7 @@
                 </div>
                 <div class="sp-c">
                         <h3 class="name">
-                            Adidas Spezial Handball Aluminium Core Black Cloud White IF6562
+                            Adidas Spezial HACB White IF6562
                         </h3>
                 </div>
                 <div>	
@@ -199,5 +200,23 @@
         </div>
     </div>
 </div>
+    <footer>
+        <div class ="main-footer-bottom">
+            <div class ="gioi-thieu">
+                <h4>Giới thiệu</h4>
+                <p>2hands Store mong muốn đem đến những trải nghiệm và dịch vụ tốt nhất cho khách hàng về các sản phẩm</p>
+            </div>
+            <div class ="Ttlh">
+                <h4>Thông tin liên hệ</h4>
+                <ul>
+                    <li>Dien thoai: 091199261</li>
+                    <li>Facebook: https://www.facebook.com</li>
+                </ul>
+            </div>
+        </div>
+        <div class="main-footer--border">
+            <p>Copyright © 2024 <a href="Homepage.html"> 2hands Store</a></p>
+        </div>
+    </footer>
 </body>
 </html>
