--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <title>Cửa Hàng Giày 2hands</title>
-    <link rel="stylesheet" type="text/css" href="homepage.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!-- Hiển thị kích thước chuẩn trên thiết bị di động -->
+
+    <!-- Reset CSS and Data and Icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="./data/css/main.css">
+    <link rel="stylesheet" href="./data/css/base.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="shortcut icon" href="img\favicon-32x32.png">
+
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+
+    <title>P2HandA</title> <!-- Tên trang-->
+    <link rel="shortcut icon" href="./data/img/favicon.png"> <!-- Favicon -->
 </head>
 <body>
     <div class="header">
