Sửa lại + Thêm các phần còn thiếu
Thêm các id và class cho các tag, điều chỉnh tỉ lệ cho phù hợp với kích thước hiển thị

--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!-- Hiển thị kích thước chuẩn trên thiết bị di động -->
-
+    <title>Cửa Hàng Giày 2hands</title>
+    <link rel="stylesheet" type="text/css" href="homepage.css">
     <!-- Reset CSS and Data and Icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./data/css/main.css">
     <link rel="stylesheet" href="./data/css/base.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
+    <link rel="shortcut icon" href="img\favicon-32x32.png">
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 
     <title>P2HandA</title> <!-- Tên trang-->
-    <link rel="shortcut icon" href="./data/img/favicon.png"> <!-- Favicon -->
+    <link rel="shortcut icon" href="img\favicon.png"> <!-- Favicon -->
 </head>
 <body>
     <div class="header">
@@ -34,11 +35,11 @@
                 </ul>
             </nav>
             <div id="search-bar">
-                <form action="search.html" method="get">
-                    <input type="text" name="query" id="search-query" placeholder="Tìm kiếm giày" aria-label="Search">
-                    <button type="submit" id="search-submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                <form action="/tim-kiem" method="get">
+                    <input type="text" name="query" id="search-query" placeholder="Tìm kiếm giày" aria-label="Search" required>
+                    <button type="submit" id="search-submit" title="Tìm kiếm"><i class="fas fa-search"></i></button>
                 </form>
-            </div>
+            </div>            
             <div id="cart">
                 <a href="login.html"><i class="fa-solid fa-user"></i></a>
                 <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
@@ -88,7 +89,7 @@
                 </div>
                 <div class="sp-c">
                         <h3 class="name">
-                            Nike Air Jordan 1 Low SE Vintage Panda (WMNS) FB9893-101
+                            Nike Air Jordan 1 Low SE Vintage Panda 
                         </h3>
                 </div>
                 <div>	
@@ -103,7 +104,7 @@
                 </div>
                 <div class="sp-c">
                         <h3 class="name">
-                            Adidas SHA Core BCW IF6562
+                            Adidas SHA Core BCW 
                         </h3>
                 </div>
                 <div>	
@@ -118,7 +119,7 @@
                 </div>
                 <div class="sp-c">
                         <h3 class="name">
-                            Puma Court Ultra Vapor Gray White 389368-09
+                            Puma Court Ultra Vapor Gray White 
                         </h3>
                 </div>
                 <div>	
@@ -133,7 +134,7 @@
                 </div>
                 <div class="sp-c">
                         <h3 class="name">
-                            Nike Air Force 1 Low Hoops DH7440-100
+                            Nike Air Force 1 Low Hoops 
                         </h3>
                 </div>
                 <div>	
