--- a/Homepage/lienhe.html
+++ b/Homepage/lienhe.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="shortcut icon" href="img\favicon-32x32.png">
+    <link rel="shortcut icon" href="img\favicon.png"> <!-- Favicon -->
 </head>
 <body>
     <div class="header">
@@ -34,7 +35,7 @@
             </div>
         </div>
     </div>
-    <main>
+    <main id="main-content">
         <nav>
             <a href="Homepage.html">Trang chủ</a> / <a href="lienhe.html">Trang liên hệ</a>
         </nav>
@@ -55,6 +56,7 @@
             </article>
         </section>
     </main> 
+    
     <footer>
         <div class ="main-footer-bottom">
             <div class ="gioi-thieu">
@@ -64,29 +66,13 @@
             <div class ="Ttlh">
                 <h4>Thông tin liên hệ</h4>
                 <ul>
-                    <li>Dien thoai: 091199261</li>
+                    <li>Điện thoại: 091199261</li>
                     <li>Facebook: https://www.facebook.com</li>
                 </ul>
             </div>
         </div>
-<<<<<<< Updated upstream
-        <div>
-            <p>&nbsp;</p>
-            <h4>Thong tin lien he</h4>
-            <ul>
-                <br>
-                <li>Điện thoại: 091199261</li>
-            </ul>
-            <h4>Thoi gian lam viec</h4>
-            <br>
-            <ul>
-                <li>Tu thu 2 den thu 6</li>
-                <li>Tu 10h den 22h</li>
-            </ul>
-=======
         <div class="main-footer--border">
             <p>Copyright © 2024 <a href="Homepage.html"> 2hands Store</a></p>
->>>>>>> Stashed changes
         </div>
     </footer>    
 </body>
